crates/biome_cli/tests/snapshots/main_commands_migrate_tailwind/tailwind_migrate_commonjs.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{ "linter": { "enabled": true } }
```

## `tailwind.config.cjs`

```cjs

module.exports = {
    theme: {
        extend: {
            borderRadius: {
                "4xl": "2rem"
            }
        }
    }
}

```

# Emitted Messages

```block
Found Tailwind config: tailwind.config.cjs
```

```block
biome.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1   │ - {·"linter":·{·"enabled":·true·}·}
      1 │ + {
      2 │ + → "linter":·{·"enabled":·true·},
      3 │ + → "tailwind":·{·"borderRadius":·{·"4xl":·"2rem"·}·}
      4 │ + }
      5 │ + 
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ biome migrate --write
  

```
