crates/biome_cli/tests/snapshots/main_commands_migrate_tailwind/tailwind_migrate_no_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{ "linter": { "enabled": true } }
```

# Termination Message

```block
migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Migration has encountered an error: Could not find a Tailwind CSS configuration file. Searched for: tailwind.config.js, tailwind.config.ts, etc.
  


```
