crates/biome_cli/tests/snapshots/main_commands_migrate_tailwind/tailwind_migrate_ts.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{ "linter": { "enabled": true } }
```

## `tailwind.config.ts`

```ts

import type { Config } from 'tailwindcss';

export default {
    theme: {
        extend: {
            zIndex: {
                "60": "60",
                "70": "70"
            }
        }
    }
} satisfies Config;

```

# Emitted Messages

```block
Found Tailwind config: tailwind.config.ts
```

```block
Could not extract theme values from the Tailwind config. The config may use dynamic values or a format that cannot be statically analyzed.
```

```block
You can manually configure Tailwind theme values in your biome.json:
```

```block
  "tailwind": {{ "spacing": {{ "3.25rem": "13" }} }}
```

```block
biome.json migrate ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Configuration file can be updated.
  
    1   │ - {·"linter":·{·"enabled":·true·}·}
      1 │ + {·"linter":·{·"enabled":·true·},·"tailwind":·{}·}
      2 │ + 
  

```

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Migration results:
  
  - biome.json: configuration needs migration.
  
  i Use --write to apply the changes.
  
  $ biome migrate --write
  

```
